--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -6,6 +6,7 @@
     <title>Portfolio Admin</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/admin.css">
+    <link rel="shortcut icon" href="auth-fav.png" type="image/x-icon">
 </head>
 <body>
 
