--- a/frontend/github.html
+++ b/frontend/github.html
@@ -6,6 +6,7 @@
     <title>GitHub Data</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/gihub.css">
+    <link rel="shortcut icon" href="auth-fav.png" type="image/x-icon">
 </head>
 <body>
 <div>
