--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="shortcut icon" href="auth-fav.png" type="image/x-icon">
 </head>
 <body>
     <div class="navbar">
