--- a/frontend/job_search.html
+++ b/frontend/job_search.html
@@ -6,6 +6,7 @@
     <title>Jobs</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/jobs.css">
+    <link rel="shortcut icon" href="auth-fav.png" type="image/x-icon">
 </head>
 <body>
     <div class="navbar">
