--- a/frontend/news.html
+++ b/frontend/news.html
@@ -6,6 +6,7 @@
     <title>News Feed App</title>
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/news.css">
+    <link rel="shortcut icon" href="auth-fav.png" type="image/x-icon">
 </head>
 <body>
     <div class="navbar">
